--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 	<title>Prototype</title>
 	<link rel="stylesheet"type ="text/css" href ="./index.css"/>
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
+<style>.mySlides {display:none;}</style>
 <body>
 	<h1>Prototype for Order-Pickup</h1>
 	<div class="my-container">
