--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="slide-container">
 		<h2 class="w3-center">Prototype Slides</h2>
 		<div class="w3-content w3-display-container">
- 			<img class="mySlides" src="./prototype/login.jpg" style="width:100%">
+ 			  <img class="mySlides" src="./prototype/login.JPG" style="width:100%">
   			<img class="mySlides" src="./prototype/loginPass.jpg" style="width:100%">
   			<img class="mySlides" src="./prototype/postalcode.jpg" style="width:100%">
   			<img class="mySlides" src="./prototype/restaurant.jpg" style="width:100%">
