--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<title>Prototype</title>
 	<link rel="stylesheet"type ="text/css" href ="./index.css"/>
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>.mySlides {display:none;}</style>
 <body>
 	<h1>Prototype for Order-Pickup</h1>
@@ -18,7 +18,7 @@
 	<div class="slide-container">
 		<h2 class="w3-center">Prototype Slides</h2>
 		<div class="w3-content w3-display-container">
- 			  <img class="mySlides" src="./prototype/login.JPG" style="height:100%">
+ 			<img class="mySlides" src="./prototype/login.jpg" style="height:100%">
   			<img class="mySlides" src="./prototype/loginPass.jpg" style="height:100%">
   			<img class="mySlides" src="./prototype/postalcode.jpg" style="height:100%">
   			<img class="mySlides" src="./prototype/restaurant.jpg" style="height:100%">
