--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 </head>
 <style>.mySlides {display:none;}</style>
 <body>
-  <h1>Prototype for Order-Pickup</h1>
-  <div class="my-container">
-    <video class="video-wrapper" controls preload> 
-        <source src="projectexperiments.mp4" media="only screen and (min-device-width: 568px)"></source>
-      </video>
+  <h1>Assignments</h1>
+  <a href="prototype.html" target="_blank">assignment4</a>
+  <a href="experiment.html" target="_blank">assignment6</a>
+
   </div>
 
 
