--- a/experiment.html
+++ b/experiment.html
@@ -8,24 +8,25 @@
 </head>
 <style>.mySlides {display:none;}</style>
 <body>
-  <h1>Project Experiments / part 1 </h1>
-  <div class="my-container">
-    <video class="video-wrapper" controls preload> 
-        <source src="experiment1.mp4" media="only screen and (min-device-width: 568px)"></source>
-      </video>
-  </div>
-
-  <h1>Project Experiments / part 2 </h1>
-  <div class="my-container">
-    <video class="video-wrapper" controls preload> 
-        <source src="experiment2.mp4" media="only screen and (min-device-width: 568px)"></source>
-      </video>
-  </div>
 
   <h1>Project Demonstration</h1>
   <div class="my-container">
     <video class="video-wrapper" controls preload> 
         <source src="demonstration.mp4" media="only screen and (min-device-width: 568px)"></source>
+    </video>
+  </div>
+  
+  <h1>Project Experiments / part 1 / no sound </h1>
+  <div class="my-container">
+    <video class="video-wrapper" width="320" controls preload> 
+        <source src="experiment1.mp4" media="only screen and (min-device-width: 568px)"></source>
+      </video>
+  </div>
+
+  <h1>Project Experiments / part 2 / no sound</h1>
+  <div class="my-container">
+    <video class="video-wrapper" width="320" controls preload> 
+        <source src="experiment2.mp4" media="only screen and (min-device-width: 568px)"></source>
       </video>
   </div>
 </body>
