--- a/experiment.html
+++ b/experiment.html
@@ -2,7 +2,7 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
-  <title>Assignment 6</title>
+  <title>Experiments/ Assignment 6</title>
   <link rel="stylesheet"type ="text/css" href ="./index.css"/>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
