--- a/prototype.html
+++ b/prototype.html
@@ -2,7 +2,7 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
-	<title>Prototype</title>
+	<title>Paper Prototype / Assignment 4</title>
 	<link rel="stylesheet"type ="text/css" href ="./index.css"/>
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
