--- a/prototype.html
+++ b/prototype.html
@@ -18,13 +18,13 @@
 	<div class="slide-container">
 		<h2 class="w3-center">Prototype Slides</h2>
 		<div class="w3-content w3-display-container">
- 			<img class="mySlides" src="./prototype/login.jpg" style="width:100%">
-  			<img class="mySlides" src="./prototype/loginPass.jpg" style="width:100%">
-  			<img class="mySlides" src="./prototype/postalcode.jpg" style="width:100%">
-  			<img class="mySlides" src="./prototype/restaurant.jpg" style="width:100%">
-  			<img class="mySlides" src="./prototype/menu.jpg" style="width:100%">
-  			<img class="mySlides" src="./prototype/payment.jpg" style="width:100%">
-  			<img class="mySlides" src="./prototype/confirmation.jpg" style="width:100%">
+ 			<img class="mySlides" src="./prototype/login.JPG" style="width:100%">
+  			<img class="mySlides" src="./prototype/loginPass.JPG" style="width:100%">
+  			<img class="mySlides" src="./prototype/postalcode.JPG" style="width:100%">
+  			<img class="mySlides" src="./prototype/restaurant.JPG" style="width:100%">
+  			<img class="mySlides" src="./prototype/menu.JPG" style="width:100%">
+  			<img class="mySlides" src="./prototype/payment.JPG" style="width:100%">
+  			<img class="mySlides" src="./prototype/confirmation.JPG" style="width:100%">
   			<button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   			<button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
 		</div>
