--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <style>.mySlides {display:none;}</style>
 <body>
   <h1>Assignments</h1>
-  	<div><a href="prototype.html" target="_blank">assignment4</a></div>
-	<div><a href="experiment.html" target="_blank">assignment6</a></div>
+  	<a href="prototype.html" target="_blank">assignment4</a>
+	<a href="experiment.html" target="_blank">assignment6</a>
 
   </div>
 
